--- a/DBMS/CMakeLists.txt
+++ b/DBMS/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DBMS)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DBMS main.cpp Column.h IntColumn.cpp IntColumn.h DoubleColumn.cpp DoubleColumn.h StringColumn.cpp StringColumn.h BoolColumn.cpp BoolColumn.h Table.cpp Table.h)
+add_executable(DBMS main.cpp Column.h IntColumn.cpp IntColumn.h DoubleColumn.cpp DoubleColumn.h StringColumn.cpp StringColumn.h BoolColumn.cpp BoolColumn.h Table.cpp Table.h DatabaseSystem.cpp DatabaseSystem.h)
