--- a/DBMS/CMakeLists.txt
+++ b/DBMS/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
-project(DBMS)
+project(DBS)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DBMS main.cpp Column.h IntColumn.cpp IntColumn.h DoubleColumn.cpp DoubleColumn.h StringColumn.cpp StringColumn.h BoolColumn.cpp BoolColumn.h Table.cpp Table.h DatabaseSystem.cpp DatabaseSystem.h)
+add_executable(DBS main.cpp Column.h IntColumn.cpp IntColumn.h DoubleColumn.cpp DoubleColumn.h StringColumn.cpp StringColumn.h BoolColumn.cpp BoolColumn.h Table.cpp Table.h DatabaseSystem.cpp DatabaseSystem.h)
